# ema-image-scanner

./: .gitmodules  package.json
.github/workflows/: publish.yml
app/: globals.css  layout.tsx  page.tsx
app/on-demand-image/: page.tsx
app/project/: page.tsx
components/: UpdaterPopup.tsx
components/on-demand-image/: OnDemandDragAndDropField.tsx  OnDemandDroppedImageTile.tsx  OnDemandProgramOutput.tsx  OnDemandTemplateEditor.tsx  OnDemandTemplateFieldRow.tsx  OnDemandTemplateReorderDialog.tsx  OnDemandTemplateReorderRow.tsx  OnDemandTemplateSelector.tsx
components/on-demand-image/constants/: on-demand-template-import-export.constants.ts  on-demand-template.constants.ts
components/on-demand-image/hooks/: useDroppedImagePreviews.ts  (+11 more)
components/projects/: index.ts
lib/hooks/: useTauriStore.ts
lib/tauri/: getOnDemandImagesServiceCommands.ts  getUtilServiceCommands.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/ocr_image_thing/: Cargo.toml
src-tauri/ocr_image_thing/src/: client.rs  lib.rs  main.rs
src-tauri/src/: app_service_container.rs  lib.rs
src-tauri/src/services/: mod.rs
src-tauri/src/services/app_save_service/: mod.rs
src-tauri/src/services/on_demand_images_service/: mod.rs  models.rs  service.rs  tauri_exports.rs
src-tauri/src/services/projects_service/: mod.rs  service.rs  tauri_exports.rs
src-tauri/src/services/projects_service/components/: image_evaluations.rs  image_exporter.rs  image_loader.rs  mod.rs
src-tauri/src/services/util_service/: mod.rs  service.rs  tauri_exports.rs
(+37 files in other folders)
