[package]
name = "ocr_image_thing"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = { version = "0.38.2", features = ["responses"] }
tokio = { version = "1.41.0", features = ["full"] }
serde_json = "1.0.145"
base64 = "0.21.0"
futures = "0.3.31"
serde = { version = "1.0.210", features = ["derive"] }
